fix pages clipping

--- a/src/assets/pages/ServicePage/ServicePage.module.scss
+++ b/src/assets/pages/ServicePage/ServicePage.module.scss
@@ -5,6 +5,7 @@
 
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   display: grid;
   grid-template-columns: 3fr 20px 7fr;
   grid-template-rows: var(--header-height) 1fr;
